// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ClaimPaper with ClaimBody 1`] = `
<div
  className="MuiPaper-root-158 MuiPaper-elevation1-161 MuiPaper-rounded-159 Component-root-156 Component-root-157 Component-root-155"
>
  <h5
    className="MuiTypography-root-187 MuiTypography-h5-196 MuiTypography-colorTextPrimary-212 MuiTypography-alignCenter-203 WithStyles(ForwardRef(Typography))-root-185 WithStyles(ForwardRef(Typography))-root-186"
  >
    This is a claim body
  </h5>
</div>
`;

exports[`Storyshots Claims Evidence 1`] = `
<div
  className="MuiPaper-root-329 MuiPaper-elevation0-331 MuiPaper-rounded-330 MuiExpansionPanel-root-325 MuiExpansionPanel-rounded-326 Component-root-324"
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="MuiButtonBase-root-364 MuiExpansionPanelSummary-root-358 Component-root-356"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="MuiExpansionPanelSummary-content-362 Component-content-357"
    >
      <div
        className="MuiBox-root-367 MuiBox-root-368"
      >
        <div
          className="MuiBox-root-367 MuiBox-root-369"
          onClick={[Function]}
        >
          <button
            aria-haspopup="true"
            className="MuiButtonBase-root-364 MuiButton-root-374 MuiButton-text-376 WithStyles(ForwardRef(Button))-root-372 WithStyles(ForwardRef(Button))-root-373 Component-root-370 Component-root-371"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-375"
            >
              66
              %
            </span>
          </button>
        </div>
      </div>
      <div
        className="MuiBox-root-367 MuiBox-root-394"
      >
        <h6
          className="MuiTypography-root-397 MuiTypography-h6-407 WithStyles(ForwardRef(Typography))-root-395 WithStyles(ForwardRef(Typography))-root-396"
        >
          <a
            className="MuiTypography-root-397 MuiTypography-colorInherit-419 MuiLink-root-429 MuiLink-underlineHover-431 Component-root-427 Component-root-428"
            href="/somesay/this-is-another-claim"
            onClick={[Function]}
          >
            This is a claim that stretches the limits of this system. It has precisely 255 characters, the maximum number of characters that a claim can have and still be valid. Anything longer than this will be rejected by the system because it is too long. Goodbye.
          </a>
        </h6>
        <div
          className="MuiBox-root-367 MuiBox-root-434"
          onClick={[Function]}
        >
          <button
            className="MuiButtonBase-root-364 MuiButton-root-374 MuiButton-text-376 WithStyles(ForwardRef(Button))-root-372 WithStyles(ForwardRef(Button))-root-435"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-375"
            >
              I agree
            </span>
          </button>
          <button
            className="MuiButtonBase-root-364 MuiButton-root-374 MuiButton-text-376 WithStyles(ForwardRef(Button))-root-372 WithStyles(ForwardRef(Button))-root-436"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-375"
            >
              I'm not sure
            </span>
          </button>
          <button
            className="MuiButtonBase-root-364 MuiButton-root-374 MuiButton-text-376 WithStyles(ForwardRef(Button))-root-372 WithStyles(ForwardRef(Button))-root-437"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-375"
            >
              I disagree
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      aria-disabled={false}
      aria-hidden="true"
      className="MuiButtonBase-root-364 MuiIconButton-root-438 MuiIconButton-edgeEnd-440 MuiExpansionPanelSummary-expandIcon-363"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label-446"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-447"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="MuiCollapse-container-456 MuiCollapse-hidden-458"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper-459"
    >
      <div
        className="MuiCollapse-wrapperInner-460"
      >
        <div
          role="region"
        >
          <div
            className="MuiExpansionPanelDetails-root-461"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Claims SupportList 1`] = `""`;

exports[`Storyshots Claims default 1`] = `
<div
  className="MuiGrid-root-219 MuiGrid-container-220 MuiGrid-spacing-xs-1-242 WithStyles(ForwardRef(Grid))-root-217 WithStyles(ForwardRef(Grid))-root-218"
/>
`;

exports[`Storyshots Header default 1`] = `
<header>
  <header
    className="MuiPaper-root-43 MuiPaper-elevation4-49 MuiAppBar-root-34 MuiAppBar-positionStatic-38 MuiAppBar-colorDefault-40"
  >
    <div
      className="MuiToolbar-root-72 MuiToolbar-regular-74 MuiToolbar-gutters-73 WithStyles(ForwardRef(Toolbar))-root-70 WithStyles(ForwardRef(Toolbar))-root-71"
    >
      <button
        aria-haspopup="true"
        className="MuiButtonBase-root-95 MuiButton-root-78 MuiButton-text-80 WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-77"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-79"
        >
          <img
            alt="logo"
            className="Component-logo-98"
            src="logo.svg"
          />
        </span>
      </button>
      <h6
        className="MuiTypography-root-105 MuiTypography-h6-115 WithStyles(ForwardRef(Typography))-root-103 WithStyles(ForwardRef(Typography))-root-104 Component-ohhey-33"
      >
        oh hey!
      </h6>
      <button
        aria-haspopup="true"
        className="MuiButtonBase-root-95 MuiButton-root-78 MuiButton-text-80 WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-135"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-79"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-136 MuiSvgIcon-colorPrimary-137"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
        </span>
      </button>
    </div>
  </header>
</header>
`;

exports[`Storyshots UI components ClaimPaper 1`] = `
<div
  className="MuiPaper-root-6 MuiPaper-elevation1-9 MuiPaper-rounded-7 Component-root-4 Component-root-5 Component-root-3"
>
  This is some paper on which to write a claim.
</div>
`;

exports[`Storyshots UI components Spinner 1`] = `
<div
  className="sk-fade-in sk-spinner Spinner-root-1 Spinner-root-2 sk-chasing-dots"
>
  <div />
  <div />
</div>
`;

exports[`Storyshots UserClaim default 1`] = `
<div
  className="MuiPaper-root-475 MuiPaper-elevation1-478 MuiPaper-rounded-476 Component-root-473 Component-root-474 Component-root-472"
>
  <div
    className="MuiToolbar-root-504 MuiToolbar-regular-506 MuiToolbar-gutters-505 WithStyles(ForwardRef(Toolbar))-root-502 WithStyles(ForwardRef(Toolbar))-root-503"
  >
    <div
      className="MuiBox-root-508 MuiBox-root-509"
    />
    <div
      className="MuiBox-root-508 MuiBox-root-510"
    >
      <a
        className="MuiTypography-root-518 MuiTypography-colorInherit-540 MuiLink-root-513 MuiLink-underlineHover-515 Component-root-511 Component-root-512"
        href="/somesay/this-is-a-claim"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-548 MuiSvgIcon-fontSizeInherit-554"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
          />
        </svg>
      </a>
      <button
        className="MuiButtonBase-root-577 MuiButton-root-560 MuiButton-text-562 WithStyles(ForwardRef(Button))-root-558 WithStyles(ForwardRef(Button))-root-559 Styled(WithStyles(ForwardRef(Button)))-root-557"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-561"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-548 MuiSvgIcon-fontSizeInherit-554"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <h6
    className="MuiTypography-root-518 MuiTypography-subtitle1-529 MuiTypography-colorTextPrimary-543 MuiTypography-alignCenter-534 WithStyles(ForwardRef(Typography))-root-594 WithStyles(ForwardRef(Typography))-root-595"
  >
    @
    toby
     believes 
  </h6>
  <h5
    className="MuiTypography-root-518 MuiTypography-h5-527 MuiTypography-colorTextPrimary-543 MuiTypography-alignCenter-534 WithStyles(ForwardRef(Typography))-root-594 WithStyles(ForwardRef(Typography))-root-596"
  >
    <a
      className="MuiTypography-root-518 MuiTypography-colorInherit-540 MuiLink-root-513 MuiLink-underlineHover-515 Component-root-511 Component-root-597"
      href="/somesay/this-is-a-claim"
      onClick={[Function]}
    >
      This is a claim
    </a>
  </h5>
  <p
    className="MuiTypography-root-518 MuiTypography-body1-520 MuiTypography-alignCenter-534 WithStyles(ForwardRef(Typography))-root-594 WithStyles(ForwardRef(Typography))-root-598"
  >
    <button
      className="MuiButtonBase-root-577 MuiButton-root-560 MuiButton-text-562 WithStyles(ForwardRef(Button))-root-558 WithStyles(ForwardRef(Button))-root-599"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-561"
      >
        I agree
      </span>
    </button>
    <button
      className="MuiButtonBase-root-577 MuiButton-root-560 MuiButton-text-562 WithStyles(ForwardRef(Button))-root-558 WithStyles(ForwardRef(Button))-root-600"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-561"
      >
        I'm not sure
      </span>
    </button>
    <button
      className="MuiButtonBase-root-577 MuiButton-root-560 MuiButton-text-562 WithStyles(ForwardRef(Button))-root-558 WithStyles(ForwardRef(Button))-root-601"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-561"
      >
        I disagree
      </span>
    </button>
  </p>
  <div>
    
    
  </div>
</div>
`;
